2004-12-05  Per Bothner  <per@bothner.com>

	* Invoke.java (inline): Add overloading.  Support constructing
	PairClasstype instances with static-link.

	* ClassMethodProc.java: New class, extends GenericProc.
	* Makefile.am: Update accordingly.

2004-10-14  Per Bothner  <per@bothner.com>

	* InstanceOf.java (compile):  Call usedClass.
	Fixes bug reported today by Dominique Boucher.

2004-08-05  Chris Dean  <ctdean@sokitomi.com>

	* SlotGet.java (Inlineable):  Check for "isFname" methods.
	* SlotSet.java (Inlineable):  Likewise.

2004-08-08  Per Bothner  <per@bothner.com>

	* Invoke.java (applyN):  Use new matchN method.  Don't use applyV.
	* TypeSwitch.java (apply):  Use new matchN/check0 methods.

2004-08-03  Per Bothner  <per@bothner.com>

	* TypeSwitch.java:  Extend MethodProc instead of CpsProcedure.

2004-07-20  Per Bothner  <per@bothner.com>

	* ArrayLength.java:  Remove unused import statements.
	* TypeSwitch.java:  Likewise.

2004-05-03  Per Bothner  <per@bothner.com>

	* ClassMemberConstraint.java (define):  If existing constaint is
	ClassMemberConstraint and value is the same, do nothing.  This fixes
	an optimization bug where car/cdr GenericProcs did not get resolved.

2004-04-17  Per Bothner  <per@bothner.com>

	* Invoke.java (inline):  Suppress most warnings if the flag
	warn-invoke-unknown-method flag is turned off.

2004-02-11  Per Bothner  <per@bothner.com>

	* ClassMethods.java (getMethods - two overloads):  New parameter
	'caller'; pass it to MethodFilter.  Remove redundant modifiers test.
	(class MethodFilter):  Add caller field.
	(select):  Check if method is accessible.
	* Invoke.java (getMethods):  New parameter 'caller'.
	(inline):  Get our calling class and pass it to getMethods.
	(getMethods(5 params)):  Inline in getStaticMethod.
	* SlotGet.java (compile):  Check if field/method is accessible.
	* SlotSet.java (compile):  Check if field/method is accessible.

2003-11-09  Per Bothner  <per@bothner.com>
